<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ciudades"
        android:orientation="vertical"
        android:background="@color/design_default_color_primary">

    <TextView
            android:text="@string/text_ciudades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@android:color/background_light"
            android:layout_margin="16dp"/>

    <Button
            android:text="@string/boton_ciudades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btCiudades"
            style="@style/Widget.AppCompat.Button"
            android:layout_margin="16dp"/>

    <Button
            android:text="@string/boton2_ciudades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btCiudad"
            style="@style/Widget.AppCompat.Button"
            android:layout_margin="16dp"/>
</LinearLayout>